file data provider api for JpsJavacFileManager
GitOrigin-RevId: be034e7bc723a97260ef65aa3f349c6552197c44